--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 
 <head>
     <title>crud</title>
-    <link rel="stylesheet" href="css/all.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="./Crud/css/all.min.css">
+    <link rel="stylesheet" href="./Crud/css/bootstrap.min.css">
 
-    <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/jquery-3.3.1.slim.min.js"></script>
-    <script src="./js/popper.min.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="./Crud/css/style.css">
+    <script src="./Crud/js/jquery-3.3.1.slim.min.js"></script>
+    <script src="./Crud/js/popper.min.js"></script>
+    <script src="./Crud/js/bootstrap.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -64,8 +64,8 @@
         </div>
     </div>
     
-            <script src="./js/jquery-3.4.1.js"></script>
-            <script src="./js/js.js"></script>
+            <script src="./Crud/js/jquery-3.4.1.js"></script>
+            <script src="./Crud/js/js.js"></script>
 
 </body>
 
